fix(ui): z-index for button.edit-pin

--- a/cotoami_desktop/ui/assets/css/app/_pins.scss
+++ b/cotoami_desktop/ui/assets/css/app/_pins.scss
@@ -112,6 +112,7 @@ section.pins {
         position: absolute;
         top: 3px;
         left: 3px;
+        z-index: 10;
 
         span.material-symbols {
           font-size: 20px;
